# win-frpc

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tailwind.config.cjs
src/: App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: TitleBar.tsx
src/components/config/: ConfigView.tsx
src/components/status/: StatusView.tsx
src/components/ui/: TitleBar.tsx  button.tsx  input.tsx
src/hooks/: useAppConfig.ts  useFrpcService.ts
src/lib/: store.ts  validation.ts
src/types/: frpc.ts
