[package]
name = "win-frpc"
version = "0.0.0"
description = "A modern FRPC client for Windows"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "^2.0.0", features = [] }

[dependencies]
tauri = { version = "^2.0.0", features = ["tray-icon"] }
tauri-plugin-opener = "2.0.0"
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-vibrancy = "0.5.0"
tauri-plugin-store = "2.0.0" 
tauri-plugin-clipboard-manager = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
